[gd_scene load_steps=9 format=2]

[ext_resource path="res://utils/AutoTrail.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/weapons/Pfft.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/weapons/Pew.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/weapons/forward_bullet_halo.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/gameplay/fail.wav" type="AudioStream" id=5]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 35.0

[node name="ForwardBullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 8850
mode = 2
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 3 )
PfftScene = ExtResource( 2 )

[node name="Wrapper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Wrapper"]
unique_name_in_owner = true
self_modulate = Color( 1.4, 1.4, 1.4, 1 )
position = Vector2( -15, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AutoTrail" parent="." instance=ExtResource( 1 )]
width = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="RandomAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 6 )
streams = [ ExtResource( 5 ) ]
randomize_volume = true
volume_min = -30.0
volume_max = -20.0
randomize_pitch = true
pitch_min = 1
pitch_max = 4.0

[connection signal="body_entered" from="." to="." method="_on_ForwardBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
